--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://example.org/'
+baseURL = 'https://app-2h3.pages.dev/'
 languageCode = 'en-us'
 title = 'COMIZOA APP MANUAL'
 theme = "hextra"
